--- a/chart/ToDoServer/values.yaml
+++ b/chart/ToDoServer/values.yaml
@@ -3,9 +3,9 @@
 replicaCount: 1
 revisionHistoryLimit: 1
 image:
-  repository: icr.io/replace-me-namespace/todoserver
-  tag: v1.0.0
-  pullPolicy: Always
+  repository: server-run
+  tag: 1.0.0
+  pullPolicy: IfNotPresent
   resources:
     requests:
       cpu: 200m
@@ -35,3 +35,4 @@ base:
 istio:
   enabled: false
   weight: 100
+secretsConfig: postgresql-database
